--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Rajat, Tejasvini, Anika",
+  "author": "Rajat, Somya,Rajdeep",
   "license": "ISC",
   "engines":{
     "node": "14.17.5"
